[Fix](ABC-1318) Color Picker - Reduce spacing to match the lightning input color (#940)
* [fix](ABC-1317): Qr Code - Fixed issue with component becoming black

* [fix](ABC-1317): Qc Code - Fixed query selector

* [fix](ABC-1318): Color Picker - Fixed margin on button

--- a/src/modules/base/colorPicker/shared.css
+++ b/src/modules/base/colorPicker/shared.css
@@ -9,8 +9,6 @@
 .slds-swatch {
     min-width: 20px;
     min-height: 20px;
-    margin-right: 0.25rem;
-    margin-left: 0.25rem;
 }
 
 .slds-tabs_default__content {
